# ACGS

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: agents-analytics.yml  agents-content.yml  agents-ideas.yml  agents-trends.yml  ci.yml  deploy-pages.yml
apps/dashboard/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/analytics/: page.tsx
apps/dashboard/src/app/content/: page.tsx
apps/dashboard/src/app/login/: page.tsx
apps/dashboard/src/app/settings/: page.tsx
apps/dashboard/src/components/: Background.tsx  CommandConsole.tsx
apps/dashboard/src/components/layout/: MobileHeader.tsx  MobileNav.tsx  Sidebar.tsx  TopBar.tsx
apps/dashboard/src/lib/: analytics-payload.ts  demo-data.ts  growth.ts  instagram.ts  live-client.ts  mappers.ts  nav.ts  queries.ts  site.ts  utils.ts
docs/: DESIGN.md  GITHUB_CRON.md  INSTAGRAM_SETUP.md
infrastructure/supabase/: seed.sql
infrastructure/supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_public_read.sql
services/: README.md  pyproject.toml  requirements.txt  run.py
services/agents/: analytics.py  base.py  content.py  orchestrator.py  trend.py
services/core/: budget_guard.py  cache.py  config.py  growth.py  model_router.py  prompts.py  rag.py  validation.py
services/integrations/: instagram.py  llm.py  store.py
services/tests/: test_core.py
(+17 files in other folders)
